# himpi

./: .cproject  .gitignore  .gitmodules  .project  Doxyfile  DoxygenLayout.xml  LICENSE.TXT  Makefile  Makefile.am  NEWS  README  acinclude.m4  aclocal.m4  aminclude.am  config.h  config.h.in~  config.status  configure  configure.ac  doxymain.h  himpirun  libtool
MPIBlib/: Makefile  Makefile.am  README  config.h  config.h.in~  config.status  configure  configure.ac  doxymain.h  libtool
MPIBlib/benchmarks/: Makefile  Makefile.am  libmpib.la  mpib.h  mpib_coll_benchmarks.h  mpib_coll_containers.cpp  mpib_coll_containers.h  mpib_coll_containers.hpp  mpib_coll_containers.lo  mpib_defs.h  mpib_getopt.c  mpib_getopt.lo  mpib_measure_bcast.c  mpib_measure_bcast.lo  mpib_measure_global.c  mpib_measure_global.lo  mpib_measure_max.c  mpib_measure_max.lo  mpib_measure_root.c  mpib_measure_root.lo  mpib_measurement.c  mpib_measurement.h  mpib_measurement.lo  mpib_output.c  mpib_output.h  mpib_output.lo  mpib_p2p_benchmarks.c  mpib_p2p_benchmarks.h  mpib_p2p_benchmarks.lo  mpib_shared.h  mpib_utilities.c  mpib_utilities.lo
MPIBlib/benchmarks/.deps/: mpib_coll_containers.Plo  mpib_getopt.Plo  mpib_measure_bcast.Plo  mpib_measure_global.Plo  mpib_measure_max.Plo  mpib_measure_root.Plo  mpib_measurement.Plo  mpib_output.Plo  mpib_p2p_benchmarks.Plo  mpib_utilities.Plo
MPIBlib/benchmarks/.libs/: libmpib.la
MPIBlib/collectives/: Makefile.am  libmpib_coll.c  libmpib_coll.h  mpib_basic_collectives.h  sg_flat.c  sgv_flat.c  sgv_flat.h
MPIBlib/p2p/: Makefile.am  libmpib_p2p.c  libmpib_p2p.h  mpib_p2p.c  mpib_p2p.h  mpib_p2p_sg.c
MPIBlib/tests/: Makefile.am  bcast-example.cpp  fragment-and-randomspawn-nonblocking.c  fragment-and-spawn-nonblocking.c  fragment-and-spawn.c  fragment-isend.c  fragment-linearsg.c  fragment-sections.c  fragment-sg.c  fragment-single.c  fragment-triangle.c  gatherv-example.c  generate-pajek-file.py  kruskal-example2.cpp  mpi_peruse.c  parallel-NPmpi.sh  parse-merge-edgelist.py  parse-merge.py  sg-based-p2p.c  sgv.c  spawned-nonblocking.c  spawned.c  substitute.c
MPIBlib/tests/bittorrent/: bcast.c  hybrid-bt-mpi-2.c  hybrid-bt-mpi-3.5.c  hybrid-bt-mpi-3.c  hybrid-bt-mpi-4.c  hybrid-bt-mpi.c
MPIBlib/tools/: Makefile.am  collective.c  collective.plot  collective_test.c  mpib_test.c  p2p.c  p2p.plot  p2p_forward.c  p2p_pairs.c
cblas_wrappers/: Makefile.am
communication/: Makefile.am  hbcast.c  hpnla_bcast.c  hpnla_bcast.h
hdla/: Makefile.in
hdnla/: Makefile.am  cblas_test.c
himpi/: Makefile  Makefile.am  hallreduce.c  hallreduce.lo  hbcast.c  hbcast.lo  hgather.c  hgather.lo  himpi.h  himpi_finalize.c  himpi_finalize.lo  himpi_init.c  himpi_init.lo  hmpi_init.c  hreduce.c  hreduce.lo  hscatter.c  hscatter.lo  libhimpi.la  mpi_bcast_algs.c  mpi_bcast_algs.lo
himpi/.deps/: hallreduce.Plo  hbcast.Plo  hgather.Plo  himpi_finalize.Plo  himpi_init.Plo  hreduce.Plo  hscatter.Plo  mpi_bcast_algs.Plo
himpi/.libs/: libhimpi.la
hmpi/: Makefile.am  hallreduce.c  hbcast.c  hbcast.h  hgather.c  hmpi.h  hmpi_finalize.c  hmpi_init.c  hreduce.c  hscatter.c  mpi_bcast_algs.c  mpi_bcast_algs.h
hpnla/: 2.5D_MM.c  2.5D_MM.h  Cannon.c  Cannon.h  LU_runner.c  MM_cannon.c  MM_mpi.c  MM_recursive.c  Makefile.am  Makefile.in  Matrix_init.c  Recursive.c  Summa.c  cblas_test.c  gemm_block.c  gemm_block_mpi.c  lu_factorization.c  lu_factorization.h  lu_hfactorization.c  lu_hfactorization.h
tests/: Makefile  Makefile.am  Makefile.in  bcast_algs.py  hbcast.c  hbcast_old.c  hbcast_old.h  hbcast_settings.py  hmpi_runner.py  modelize_hbcast.py  mpi_bcast_algs.c  mpi_bcast_algs.h  ompi_tuned_file.conf  plot_graphs.py  run_hbcast_test.py  test_hbcast.c  utils.c  utils.h
tests/linear_algebra/: 2.5D_MM.c  Cannon  Cannon.c  Cannon.h  LU_runner  MM_cannon.c  MM_mpi  MM_mpi.c  MM_recursive  Makefile  Makefile.am  Matrix_init.h  Recursive.c  Recursive.h  Summa.c  Summa.h  cblas_test  cblas_test.c  gemm_block  gemm_block.c  gemm_block_mpi  hpnla_cblas.cpp  hpnla_cblas.h  lu_factorization.c  lu_factorization.h
tests/linear_algebra/.deps/: 2.5D_MM.Po  Cannon.Po  LU_runner.Po  MM_cannon.Po  MM_mpi.Po  MM_recursive.Po  Matrix_init.Po  Recursive.Po  Summa.Po  cblas_test.Po  gemm_block.Po  gemm_block_mpi.Po  hpnla_cblas.Po  lu_factorization.Po
tests/mpi/: Makefile  Makefile.am  default_file.conf-0  fayil.conf  get_hbcast_exec_time.c  hbcast_old.c  hbcast_old.h  hbcast_settings.py  hmpi_runner.py  ompi_tuned_file.conf  test_hbcast  test_hbcast.c  test_hscatter.c  test_hscatter_hgather.c
tests/mpi/.deps/: test_hbcast.Po
tools/: Makefile  Makefile.am  Makefile.in  hpnla_bind.c  hpnla_bind.h  hpnla_bind.lo  hpnla_conf.c  hpnla_conf.h  hpnla_conf.lo  hpnla_debug.h  hpnla_timer.c  hpnla_timer.h  hpnla_timer.lo  libhimpi_tools.la  optimal_groups.c  optimal_groups.h  optimal_groups.lo  utils.c  utils.h
tools/.deps/: hpnla_bind.Plo  hpnla_conf.Plo  hpnla_timer.Plo  optimal_groups.Plo  utils.Plo
tools/.libs/: libhimpi_tools.la
www/: footer.html  header.html
