AM_CPPFLAGS = -I$(top_builddir) -I$(top_srcdir) -I$(top_builddir)/communication


include_HEADERS = \
	hpnla_bcast.h \
        hbcast.h

noinst_LTLIBRARIES = \
	libhpnla_bcast.la \
	libhbcast.la

libhpnla_bcast_la_SOURCES = \
	hpnla_bcast.c \
	hpnla_bcast.h 

libhbcast_la_SOURCES = \
        hbcast.c \
        hbcast.h
        
        

